# gm-tool

./: .env.test  .eslintignore  .eslintrc.json  .gitignore  .markdownlint.json  CHANGELOG.md  CLAUDE.md  README.md  eslint.config.mjs  jest.config.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json
.claude/: CLAUDE.md  launch.json  settings.local.json
.githooks/: prepare-commit-msg
.zed/: prettier-setup.md  settings.json
app/: .gitignore  .prettierignore  .prettierrc  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
app/src-tauri/: CLAUDE.md  Cargo.toml  Info.plist  tauri.conf.json  tauri.dev.conf.json  tauri.windows.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs
app/src-tauri/src/commands/: mod.rs
app/src-tauri/src/commands/connectivity/: enter_pairing_mode.rs  exit_pairing_mode.rs  get_connected_peers.rs  init_connectivity.rs  mod.rs  remove_trusted_peer.rs  request_pairing_code.rs  send_message.rs  submit_pairing_code.rs  update_own_name.rs
app/src-tauri/src/commands/images/: delete_image.rs  get_image_url.rs  image_file_exists.rs  mod.rs  read_image_bytes.rs  save_image.rs  save_image_bytes.rs
app/src-tauri/src/commands/updater/: check_update.rs  download_update.rs  install_and_relaunch.rs  install_update.rs  mod.rs  pending_install.rs
app/src-tauri/src/connectivity/: connections.rs  identity.rs  mod.rs  pairing.rs
convex/: crons.ts  schema.ts
(+1738 files in other folders)
