[package]
name = "gm-tool"
version = "0.8.1"
description = "A TTRGP session management tool"
authors = ["Simon Schötz"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
iroh = "1"
iroh-mdns-address-lookup = "0.4"
rand = "0.10.2"
tokio = { version = "1.52.3", features = ["sync", "time", "macros"] }
futures-core = "0.3.32"
base64 = "0.22.1"
